--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
